--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity Web Player | TOTVS ExploradorGalatico</title>
+    <title>Unity Web Player | Bunker42</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-logo-title-footer"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">TOTVS ExploradorGalatico</div>
+        <div id="unity-build-title">Bunker42</div>
       </div>
     </div>
     <script>
@@ -52,15 +52,15 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/WebPage.loader.js";
+      var loaderUrl = buildUrl + "/Bunker-42-WebPage.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/WebPage.data.br",
-        frameworkUrl: buildUrl + "/WebPage.framework.js.br",
-        codeUrl: buildUrl + "/WebPage.wasm.br",
+        dataUrl: buildUrl + "/Bunker-42-WebPage.data",
+        frameworkUrl: buildUrl + "/Bunker-42-WebPage.framework.js",
+        codeUrl: buildUrl + "/Bunker-42-WebPage.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
-        productName: "TOTVS ExploradorGalatico",
+        companyName: "RealGamesStudio",
+        productName: "Bunker42",
         productVersion: "0.1.0",
         showBanner: unityShowBanner,
       };
