--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/Bunker-42-WebPage.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/Bunker-42-WebPage.data.gz",
-        frameworkUrl: buildUrl + "/Bunker-42-WebPage.framework.js.gz",
-        codeUrl: buildUrl + "/Bunker-42-WebPage.wasm.gz",
+        dataUrl: buildUrl + "/Bunker-42-WebPage.data",
+        frameworkUrl: buildUrl + "/Bunker-42-WebPage.framework.js",
+        codeUrl: buildUrl + "/Bunker-42-WebPage.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "RealGamesStudio",
         productName: "Bunker42",
