--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Bunker-42-WebPage.loader.js";
+      var loaderUrl = buildUrl + "/B.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/Bunker-42-WebPage.data",
-        frameworkUrl: buildUrl + "/Bunker-42-WebPage.framework.js",
-        codeUrl: buildUrl + "/Bunker-42-WebPage.wasm",
+        dataUrl: buildUrl + "/B.data",
+        frameworkUrl: buildUrl + "/B.framework.js",
+        codeUrl: buildUrl + "/B.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "RealGamesStudio",
         productName: "Bunker42",
