--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/B.loader.js";
+      var loaderUrl = buildUrl + "/A.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/B.data",
-        frameworkUrl: buildUrl + "/B.framework.js",
-        codeUrl: buildUrl + "/B.wasm",
+        dataUrl: buildUrl + "/A.data",
+        frameworkUrl: buildUrl + "/A.framework.js",
+        codeUrl: buildUrl + "/A.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "RealGamesStudio",
         productName: "Bunker42",
