--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <script>
       const hideFullScreenButton = "";
       const buildUrl = "Build";
-      const loaderUrl = buildUrl + "/Bunker-42-WebPage.loader.js";
+      const loaderUrl = buildUrl + "/10.loader.js";
       const config = {
-        dataUrl: buildUrl + "/Bunker-42-WebPage.data",
-        frameworkUrl: buildUrl + "/Bunker-42-WebPage.framework.js",
-        codeUrl: buildUrl + "/Bunker-42-WebPage.wasm",
+        dataUrl: buildUrl + "/10.data",
+        frameworkUrl: buildUrl + "/10.framework.js",
+        codeUrl: buildUrl + "/10.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "RealGamesStudio",
         productName: "Bunker42",
